// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth/AddAuth add authorization when user click submit button 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-19kzrtu"
    >
      <div
        class="ant-card ant-card-bordered add-auth-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              授权
            </div>
            <div
              class="ant-card-extra"
            >
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  返 回
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            class="ant-result ant-result-success"
          >
            <div
              class="ant-result-icon"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-result-title"
            >
              授权成功
            </div>
            <div
              class="ant-result-subtitle"
            >
              完成授权，
              查看连接串
              转发给本次授权的负责人。
            </div>
          </div>
          <div
            class="ant-row ant-row-center"
          >
            <a
              href="/700300/auth/list"
            >
              <button
                class="ant-btn ant-btn-link"
                type="button"
              >
                <span>
                  前往授权清单
                </span>
              </button>
            </a>
            <button
              class="ant-btn ant-btn-link"
              type="button"
            >
              <span>
                继续授权
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    data-rc-order="append"
    rc-util-key="antd-wave"
  />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-wrap"
        style="display: none;"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal"
          role="dialog"
          style="width: 800px; display: none;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                账号创建预览
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <input
                height="300px"
                language="sql"
                value=""
              />
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default"
                disabled=""
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                ant-click-animating-without-extra-node="false"
                class="ant-btn ant-btn-primary ant-btn-loading"
                type="button"
              >
                <span
                  class="ant-btn-loading-icon"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Auth/AddAuth add authorization when user click submit button 2`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-19kzrtu"
    >
      <div
        class="ant-card ant-card-bordered add-auth-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              授权
            </div>
            <div
              class="ant-card-extra"
            >
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  返 回
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <form
            class="ant-form ant-form-horizontal"
          >
            <div
              class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
              role="separator"
            >
              <span
                class="ant-divider-inner-text"
              >
                选择权限模版
              </span>
            </div>
            <div
              class="ant-form-item"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-col-7 ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="data_permission_template_uid"
                    title="权限模版"
                  >
                    权限模版
                  </label>
                </div>
                <div
                  class="ant-col ant-col-10 ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="data_permission_template_uid_list_0"
                              aria-autocomplete="list"
                              aria-controls="data_permission_template_uid_list"
                              aria-haspopup="listbox"
                              aria-owns="data_permission_template_uid_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="data_permission_template_uid"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          />
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-col-7 ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="effective_time_day"
                    title="有效期"
                  >
                    有效期
                  </label>
                </div>
                <div
                  class="ant-col ant-col-10 ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="effective_time_day_list_0"
                              aria-autocomplete="list"
                              aria-controls="effective_time_day_list"
                              aria-haspopup="listbox"
                              aria-owns="effective_time_day_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="effective_time_day"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-item"
                            title="永久"
                          >
                            永久
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
              role="separator"
            >
              <span
                class="ant-divider-inner-text"
              >
                授权目的
              </span>
            </div>
            <div
              class="ant-form-item"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-col-7 ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="permission_user_uid"
                    title="使用人"
                  >
                    使用人
                  </label>
                </div>
                <div
                  class="ant-col ant-col-10 ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow ant-select-show-search"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="permission_user_uid_list_0"
                              aria-autocomplete="list"
                              aria-controls="permission_user_uid_list"
                              aria-haspopup="listbox"
                              aria-owns="permission_user_uid_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="permission_user_uid"
                              role="combobox"
                              type="search"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-placeholder"
                          />
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-col-7 ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="purpose"
                    title="目的或用途"
                  >
                    目的或用途
                  </label>
                </div>
                <div
                  class="ant-col ant-col-10 ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        aria-required="true"
                        class="ant-input"
                        id="purpose"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-col-7 ant-form-item-label"
                >
                  <label
                    class=""
                    for="memo"
                    title="备注"
                  >
                    备注
                  </label>
                </div>
                <div
                  class="ant-col ant-col-10 ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <textarea
                        class="ant-input"
                        id="memo"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
              role="separator"
            >
              <span
                class="ant-divider-inner-text"
              >
                数据库连接账号
              </span>
            </div>
            <div
              class="ant-form-item"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-col-7 ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="username"
                    title="连接账号名"
                  >
                    连接账号名
                  </label>
                </div>
                <div
                  class="ant-col ant-col-10 ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        aria-required="true"
                        class="ant-input"
                        id="username"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-col-7 ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="hostname"
                    title="连接域"
                  >
                    连接域
                  </label>
                </div>
                <div
                  class="ant-col ant-col-10 ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        aria-required="true"
                        class="ant-input"
                        id="hostname"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-col-7 ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="password"
                    title="连接密码"
                  >
                    连接密码
                  </label>
                </div>
                <div
                  class="ant-col ant-col-10 ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <span
                        class="ant-input-affix-wrapper ant-input-password action-password-input"
                      >
                        <input
                          aria-required="true"
                          class="ant-input"
                          id="password"
                          type="password"
                          value=""
                        />
                        <span
                          class="ant-input-suffix"
                        >
                          <span
                            aria-label="eye-invisible"
                            class="anticon anticon-eye-invisible"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="eye-invisible"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                              />
                              <path
                                d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                              />
                            </svg>
                          </span>
                          <button
                            class="ant-btn ant-btn-primary ant-btn-sm"
                            type="button"
                          >
                            <span>
                              生 成
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item"
            >
              <div
                class="ant-row ant-form-item-row"
              >
                <div
                  class="ant-col ant-col-7 ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="confirm_password"
                    title="确认连接密码"
                  >
                    确认连接密码
                  </label>
                </div>
                <div
                  class="ant-col ant-col-10 ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <span
                        class="ant-input-affix-wrapper ant-input-password"
                      >
                        <input
                          aria-required="true"
                          class="ant-input"
                          id="confirm_password"
                          type="password"
                          value=""
                        />
                        <span
                          class="ant-input-suffix"
                        >
                          <span
                            aria-label="eye-invisible"
                            class="anticon anticon-eye-invisible ant-input-password-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="eye-invisible"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                              />
                              <path
                                d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            class="ant-row"
          >
            <div
              class="ant-col ant-col-17"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center footer-button"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default"
                    type="button"
                  >
                    <span>
                      重 置
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary"
                    type="button"
                  >
                    <span>
                      确 认
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    data-rc-order="append"
    rc-util-key="antd-wave"
  />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-wrap"
        style="display: none;"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal"
          role="dialog"
          style="width: 800px; display: none;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                账号创建预览
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <input
                height="300px"
                language="sql"
                value=""
              />
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn ant-btn-default"
                disabled=""
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                ant-click-animating-without-extra-node="false"
                class="ant-btn ant-btn-primary ant-btn-loading"
                type="button"
              >
                <span
                  class="ant-btn-loading-icon"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Auth/AddAuth should match snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-19kzrtu"
  >
    <div
      class="ant-card ant-card-bordered add-auth-card"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            授权
          </div>
          <div
            class="ant-card-extra"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span>
                返 回
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <form
          class="ant-form ant-form-horizontal"
        >
          <div
            class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
            role="separator"
          >
            <span
              class="ant-divider-inner-text"
            >
              选择权限模版
            </span>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-7 ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="data_permission_template_uid"
                  title="权限模版"
                >
                  权限模版
                </label>
              </div>
              <div
                class="ant-col ant-col-10 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="data_permission_template_uid_list_0"
                            aria-autocomplete="list"
                            aria-controls="data_permission_template_uid_list"
                            aria-haspopup="listbox"
                            aria-owns="data_permission_template_uid_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="data_permission_template_uid"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        />
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-7 ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="effective_time_day"
                  title="有效期"
                >
                  有效期
                </label>
              </div>
              <div
                class="ant-col ant-col-10 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="effective_time_day_list_0"
                            aria-autocomplete="list"
                            aria-controls="effective_time_day_list"
                            aria-haspopup="listbox"
                            aria-owns="effective_time_day_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="effective_time_day"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="永久"
                        >
                          永久
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
            role="separator"
          >
            <span
              class="ant-divider-inner-text"
            >
              授权目的
            </span>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-7 ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="permission_user_uid"
                  title="使用人"
                >
                  使用人
                </label>
              </div>
              <div
                class="ant-col ant-col-10 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-show-arrow ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="permission_user_uid_list_0"
                            aria-autocomplete="list"
                            aria-controls="permission_user_uid_list"
                            aria-haspopup="listbox"
                            aria-owns="permission_user_uid_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="permission_user_uid"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        />
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-7 ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="purpose"
                  title="目的或用途"
                >
                  目的或用途
                </label>
              </div>
              <div
                class="ant-col ant-col-10 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input"
                      id="purpose"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-7 ant-form-item-label"
              >
                <label
                  class=""
                  for="memo"
                  title="备注"
                >
                  备注
                </label>
              </div>
              <div
                class="ant-col ant-col-10 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input"
                      id="memo"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
            role="separator"
          >
            <span
              class="ant-divider-inner-text"
            >
              数据库连接账号
            </span>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-7 ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="username"
                  title="连接账号名"
                >
                  连接账号名
                </label>
              </div>
              <div
                class="ant-col ant-col-10 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input"
                      id="username"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-7 ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="hostname"
                  title="连接域"
                >
                  连接域
                </label>
              </div>
              <div
                class="ant-col ant-col-10 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input"
                      id="hostname"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-7 ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="password"
                  title="连接密码"
                >
                  连接密码
                </label>
              </div>
              <div
                class="ant-col ant-col-10 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-password action-password-input"
                    >
                      <input
                        aria-required="true"
                        class="ant-input"
                        id="password"
                        type="password"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="eye-invisible"
                          class="anticon anticon-eye-invisible"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="eye-invisible"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                            />
                            <path
                              d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                            />
                          </svg>
                        </span>
                        <button
                          class="ant-btn ant-btn-primary ant-btn-sm"
                          type="button"
                        >
                          <span>
                            生 成
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-7 ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="confirm_password"
                  title="确认连接密码"
                >
                  确认连接密码
                </label>
              </div>
              <div
                class="ant-col ant-col-10 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-password"
                    >
                      <input
                        aria-required="true"
                        class="ant-input"
                        id="confirm_password"
                        type="password"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="eye-invisible"
                          class="anticon anticon-eye-invisible ant-input-password-icon"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="eye-invisible"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                            />
                            <path
                              d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
        <div
          class="ant-row"
        >
          <div
            class="ant-col ant-col-17"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center footer-button"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <button
                  class="ant-btn ant-btn-default"
                  type="button"
                >
                  <span>
                    重 置
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    确 认
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
